<resources>
    <string name="app_name">Notes</string>
    <string name="day">Day:</string>
    <string name="save">Save</string>
    <string name="note_title">Note title:</string>
    <string name="note_description">note description</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="warning_fill_fields">Fill all fields!</string>
    <string name="priority">Priority</string>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>